--- a/ModelOclock/res/layout/activity_main.xml
+++ b/ModelOclock/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res/com.heibai.modeloclock"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/haha"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity" >
