--- a/ModelOclock/res/layout/activity_main.xml
+++ b/ModelOclock/res/layout/activity_main.xml
@@ -1,18 +1,19 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res/com.heibai.modeloclock"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/haha"
+    android:id="@+id/ll_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/haha"
+    android:orientation="horizontal"
     tools:context=".MainActivity" >
 
     <com.heibai.modeloclock.view.MyAnalogClock
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:layout_centerHorizontal="true"
-        app:dial="@drawable/default_dail"
+        android:id="@+id/my_clock"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         app:hand_hour="@drawable/default_clock_hour"
         app:hand_minute="@drawable/default_clock_min"
         app:hand_second="@drawable/default_clock_second" />
 
-</RelativeLayout>
+</LinearLayout>
