时钟窗口xml参数文档定义完毕,pull解析数据完毕,根据配置显示时钟.接下来要解决时钟缩放问题

--- a/ModelOclock/res/layout/activity_main.xml
+++ b/ModelOclock/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         android:id="@+id/my_clock"
         android:layout_width="200dp"
         android:layout_height="200dp"
+        app:dial="@drawable/default_dail"
         app:hand_hour="@drawable/default_clock_hour"
         app:hand_minute="@drawable/default_clock_min"
         app:hand_second="@drawable/default_clock_second" />
